Prevent queue list rows from line wrapping

--- a/code/public/css/rq.css
+++ b/code/public/css/rq.css
@@ -44,6 +44,10 @@ td {
   vertical-align: text-top;
 }
 
+#queue-list td {
+  white-space: nowrap;
+}
+
 #custom-queues {
   background: #FEF9EE;
 }
